--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,6 +4,10 @@ main = "src/index.js"
 compatibility_date = "2024-12-24"
 compatibility_flags = ["nodejs_compat"]
 
+routes = [
+  { pattern = "tunnel.swtest.site", custom_domain = true }
+]
+
 # Workers Logs
 # Docs: https://developers.cloudflare.com/workers/observability/logs/workers-logs/
 # Configuration: https://developers.cloudflare.com/workers/observability/logs/workers-logs/#enable-workers-logs
@@ -100,6 +104,11 @@ enabled = true
 # [[r2_buckets]]
 # binding = "MY_BUCKET"
 # bucket_name = "my-bucket"
+# R2 Bucket Binding
+[[r2_buckets]]
+binding = "FLAGS_BUCKET"
+bucket_name = "flags"
+
 
 # Bind another Worker service. Use this binding to call another Worker without network overhead.
 # Docs: https://developers.cloudflare.com/workers/wrangler/configuration/#service-bindings
